CHANGELOG fuer c't-Bot
======================
2016-09-25: Remotecall-Display (DISPLAY_REMOTECALL_AVAILABLE) erweitert um Statusanzeige der Verhalten. Kann damit das Verhaltensdisplay (DISPLAY_BEHAVIOUR_AVAILABLE) ersetzen.

2016-09-24: Verhaltenskonfiguration aufgeraeumt

2016-09-24: Kompatibilitaet mit aktuellem AVR Compiler (4.9.2) und gcc 6.2

2016-09-18: Konfigurationsoptionen aufgeraeumt, Dokumentation ueberarbeitet

2016-07-09: Release 23 (v1.23)

2016-07-03: Unterstuetzung der MSYS2 Toolchain unter Windows, siehe https://www.heise.de/ct/projekte/machmit/ctbot/wiki/InstallationsanleitungR23 zur Einrichtung

2016-05-28: Verhalten bot_goto_pos verbessert, bot_drive_square aktualisiert fuer die Benutzung von bot_goto_pos

2016-05-15: Verwendung von Speedlog ohne MMC mit UART-Ausgabe. Konfiguration: SPEED_LOG_AVAILABLE an, LOG_UART_AVAILABLE an, USE_MINILOG an, BOT_2_SIM_AVAILABLE aus, MMC_AVAILABLE aus

2016-05-08: Zusaetzliche Display-/Log-Funktionen: Uebertragung der MCU-Displayausgaben an RPi, Logging von MCU zu RPi via LOG_RPI_AVAILABLE, Auslastungsanzeige fuer CPU und UART verbessert

2016-04-17: Abfragemoeglichkeit der Servoposition mittels servo_get_pos(); verzoegerte Ausfuehrung von Funktionen mittels os_delay_func() (nur fuer MCU)

2016-03-22: Schalter in ct-Bot.h gemaess Doku sortiert und Kategorien ergaenzt (Nightwalker-01)

2016-03-20: Bugfix fuer Fernbedienung Technisat_TTS35AI nach Hinweis von anonybot. Weitere Fernbedienungscodes etwas aufgeraeumt.

2016-03-05: Build-Target fuer Raspberry Pi 3

2016-02-27: Unterstuetzung fuer alternativen Distanzsensor Typ GP2Y0A60

2016-02-21: Auswertungsreihenfolge der Sensoren aktualisiert, mehr Zeit fuer die digitalen Sensoren, die per ENA deaktiviert werden; LED Flackern auf RPi behoben; Bugfix Distanzsensor wenn Klappe bewegt wird

2016-02-20: Bugfix Ansteuerung Servo 2: Initialisierung auf Mittelstellung, Servo-Verhalten fuer 2. Servo angepasst
